--- a/sgejs/src/main/webapp/views/servidores/componentes/endereco.html
+++ b/sgejs/src/main/webapp/views/servidores/componentes/endereco.html
@@ -14,7 +14,7 @@ and open the template in the editor.
             <input type="text" ng-model="servidor.endereco.rua"/>
         </div>
     </div>
-    <div class="cell padding10">
+    <div class="cell size2 padding10">
         <label>Número</label>
         <div class="input-control select full-size">
             <input type="text" ng-model="servidor.endereco.numero"/>
