--- a/sgejs/src/main/webapp/views/servidores/componentes/reservista.html
+++ b/sgejs/src/main/webapp/views/servidores/componentes/reservista.html
@@ -1,8 +1,4 @@
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <div class="row cell-auto-size">
     <div class="cell">
         <h4>CPF</h4>
@@ -16,7 +12,7 @@ and open the template in the editor.
         </div>
     </div>
     <div class="cell">
-        <h4>Documento Militar</h4>
+        <h4>Documento Militar (Somente para Sexo Masculino)</h4>
         <input hidden ng-model="servidor.documento.reservista.id"/>
         <div class="row cell-auto-size">
             <div class="cell padding10">
