--- a/sgejs/src/main/webapp/views/servidores/modal_funcao.html
+++ b/sgejs/src/main/webapp/views/servidores/modal_funcao.html
@@ -3,14 +3,14 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<div class="window" data-role="dialog" id="modal_funcao" data-place="bottom-right" data-width="700px" data-overlay="true" data-overlay-color="op-dark" data-overlay-click-close="true">
+<div class="window" data-role="dialog" id="modal_funcao" data-place="top-center" data-width="700px" data-overlay="true" data-overlay-color="op-dark" data-overlay-click-close="true">
     <div class="window-caption bg-darkGreen fg-white">
         <span class="window-caption-icon"><span class="mif-plus"></span></span>
         <span class="window-caption-title">Adicionar Função/Cargo</span>
         <!--<span class="btn-min"></span><span class="btn-max"></span>-->
         <span class="btn-close" ng-click="fecharModal('#modal_funcao')"></span>
     </div>
-    <div class="window-content bg-grayLighter">
+    <div class="window-content bg-grayLighter padding20">
         <form name="form_funcao">
             <div class="flex-grid">
                 <input type="text" hidden ng-model="funcao.id"/>
@@ -51,7 +51,7 @@ and open the template in the editor.
                             <button class="button"><span class="mif-calendar"></span></button>
                         </div>
                     </div>
-                    <div class="cell padding10">
+                    <div class="cell size2 padding10">
                         <label>Carga Horária</label>
                         <div class="input-control full-size text">
                             <input type="text" ng-model="funcao.cargaHoraria" required/>
@@ -59,32 +59,24 @@ and open the template in the editor.
                     </div>
                 </div>
                 <div class="row cell-auto-size">
-                    <div class="cell padding10">
-                        <p>Situação</p>
-                        <label class="input-control radio small-check">
-                            <input type="radio" name="situacao" ng-model="funcao.situacao" required/>
-                            <span class="check"></span>
-                            <span class="caption">Ativo</span>
-                        </label>                    
-                        <label class="input-control radio small-check">
-                            <input type="radio" name="situacao" ng-model="funcao.situacao" required/>
-                            <span class="check"></span>
-                            <span class="caption">Inativo</span>
-                        </label>                    
-                        <label class="input-control radio small-check">
-                            <input type="radio" name="situacao" ng-model="funcao.situacao" required/>
-                            <span class="check"></span>
-                            <span class="caption">Afastado</span>
-                        </label>
+                    <div class="cell size3 padding10">
+                        <label>Situação</label>
+                        <div class="input-control select full-size">
+                            <select ng-model="funcao.situacao" required>
+                                <option value=""></option>
+                                <option value="ativo">Ativo</option>
+                                <option value="inativo">Inativo</option>
+                                <option value="afastado">Afastado</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
             </div>
-        </form>
 
-        <div class="button-group padding10 place-right">
-            <button ng-disabled="form_funcao.$invalid" class="button" ng-click="adicionarDependente()"><span class="mif-floppy-disk icon"></span> Salvar</button>
-            <button class="button" ng-click="fecharModal('#modal_dependente')"><span class="mif-cancel icon"></span> Cancelar</button>
-        </div>
-        <div class="padding10"></div>
+            <div class="button-group padding10 place-right">
+                <button ng-disabled="form_funcao.$invalid" class="button" ng-click="adicionarFuncao()"><span class="mif-floppy-disk icon"></span> Salvar</button>
+                <button class="button" ng-click="fecharModal('#modal_funcao')"><span class="mif-cancel icon"></span> Cancelar</button>
+            </div>
+        </form>
     </div>
 </div>
