--- a/sgejs/src/main/webapp/views/servidores/modal_dependente.html
+++ b/sgejs/src/main/webapp/views/servidores/modal_dependente.html
@@ -3,7 +3,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<div class="window" data-role="dialog" id="modal_dependente" data-place="bottom-right" data-width="700px" data-overlay="true" data-overlay-color="op-dark" data-overlay-click-close="true">
+<div class="window" data-role="dialog" id="modal_dependente" data-place="top-center" data-width="700px" data-overlay="true" data-overlay-color="op-dark" data-overlay-click-close="true">
     <div class="window-caption bg-darkGreen fg-white">
         <span class="window-caption-icon"><span class="mif-user-plus"></span></span>
         <span class="window-caption-title">Adicionar Dependente</span>
