--- a/sgejs/src/main/webapp/views/servidores/modal_graduacao.html
+++ b/sgejs/src/main/webapp/views/servidores/modal_graduacao.html
@@ -3,7 +3,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
-<div class="window" data-role="dialog" id="modal_graduacao" data-place="bottom-right" data-width="800px" data-overlay="true" data-overlay-color="op-dark" data-overlay-click-close="true">
+<div class="window" data-role="dialog" id="modal_graduacao" data-windows-style="false" data-width="800px" data-overlay="true" data-overlay-color="op-dark" data-overlay-click-close="true" style="right: 10px!important">
     <div class="window-caption bg-darkGreen fg-white">
         <span class="window-caption-icon"><span class="mif-plus"></span></span>
         <span class="window-caption-title">Adicionar Graduação</span>
@@ -31,8 +31,9 @@ and open the template in the editor.
                     </div>
                     <div class="cell size3 padding10">
                         <label>* Ano</label>
-                        <div class="input-control text full-size">
+                        <div class="input-control text full-size" data-role="datepicker">
                             <input type="text" required ng-model="graduacao.ano"/>
+                            <button class="button"><span class="mif-calendar"></span></button>
                         </div>
                     </div>
                 </div>
